# inference-tools

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  python_publish.yml  tests.yml
demos/: ChainPool_demo.py  GaussianKDE_demo.py  GibbsChain_demo.py  GpOptimiser_demo.py  GpRegressor_demo.py  HamiltonianChain_demo.py  ParallelTempering_demo.py  UnimodalPdf_demo.py  density_estimation_demo.ipynb  gaussian_fitting_demo.ipynb  gibbs_sampling_demo.ipynb  gp_linear_inversion_demo.ipynb  gp_optimisation_demo.ipynb  gp_regression_demo.ipynb  hamiltonian_mcmc_demo.ipynb  heteroscedastic_noise.ipynb  parallel_tempering_demo.ipynb  peak_fitting_demo.ipynb  spectroscopy_demo.py
demos/scripts/: ChainPool_demo.py  GaussianKDE_demo.py  GibbsChain_demo.py  GpInverter_demo.py  GpOptimiser_demo.py  GpRegressor_demo.py  HamiltonianChain_demo.py  ParallelTempering_demo.py  PcaChain_demo.py  UnimodalPdf_demo.py  gaussian_fitting_demo.py  parameter_constraints_demo.py  spectroscopy_demo.py
docs/: requirements.txt
docs/source/: EnsembleSampler.rst  GibbsChain.rst  GpLinearInverter.rst  GpOptimiser.rst  GpRegressor.rst  HamiltonianChain.rst  ParallelTempering.rst  PcaChain.rst  acquisition_functions.rst  approx.rst  conf.py  covariance_functions.rst  demos.rst  distributions.rst  docs_image_production.py  getting_started.rst  gp.rst  gp_tools.rst  index.rst  likelihoods.rst  mcmc.rst  pdf.rst  pdf_tools.rst  plotting.rst  posterior.rst  priors.rst
inference/: __init__.py  acquisition.py  covariance.py  gp.py  gp_tools.py  likelihoods.py  mcmc.py  mean.py  pdf.py  pdf_tools.py  plotting.py  posterior.py  priors.py
inference/approx/: __init__.py  conditional.py
inference/future/: hmc.py  lbde.py
inference/gp/: __init__.py  acquisition.py  covariance.py  inversion.py  latent.py  mean.py  optimisation.py  regression.py
inference/mcmc/: __init__.py  base.py  ensemble.py  gibbs.py  hmc.py  markov.py  parallel.py  pca.py  (+1 more)
tests/: test_GpOptimiser.py  test_GpRegressor.py  test_covariance.py  test_likelihoods.py  test_mcmc.py  test_pdf.py  test_plotting.py  test_posterior.py  test_priors.py
(+35 files in other folders)
