[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 6.2",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference"]

[tool.setuptools_scm]
write_to = "inference/_version.py"
git_describe_command = "git describe --dirty --tags --long --first-parent"


[project]
name = "inference-tools"
dynamic = ["version"]
authors = [
    {name = "Chris Bowman", email = "chris.bowman.physics@gmail.com"},
]
description = "A collection of python tools for Bayesian data analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.20",
    "scipy >= 1.6.3",
    "matplotlib >= 3.4.2",
]

[project.urls]
Homepage = "https://github.com/C-bowman/inference-tools"
Documentation = "https://inference-tools.readthedocs.io/en/stable/"

[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
    "pytest-cov >= 3.0.0",
    "pyqt5 >= 5.15",
    "hypothesis >= 6.24",
    "freezegun >= 1.1.0",
]
