[metadata]
name = inference-tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/inference-tools
author = Chris Bowman
author_email = chris.bowman.physics@gmail.com
description = A collection of python tools for Bayesian data analysis
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/inference-tools
    Tracker = https://github.com/C-bowman/inference-tools/issues

[options]
packages = find:
install_requires =
    numpy >= 1.8
    scipy >= 1.6.3
    matplotlib >= 3.4.2
    importlib-metadata; python_version >= "3.6"

[options.extras_require]
tests =
    pytest >= 3.3.0
    pytest-cov >= 3.0.0
    pyqt5 >= 5.15
